--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 #container {
     display: flex;
+    max-width: 800px;
+    max-height: 800px;
+    border: gray 1px solid;
 }
 
 .row {
@@ -8,8 +11,6 @@
     
 }
 
-.item {
-    border: gray 1px solid;
-    height: 20px;
-    width: 20px;
+.btn {
+    margin: 5px;
 }
